--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Add jsdelivr.net boostrap 5.1.3-->
-    <!--Add jquery themes-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -71,45 +71,45 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Day 1</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp: <span class="temp"></span></p>
-                                    <p>Wind: <span class="wind"></span></p>
-                                    <p>Humidity: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span class="temp"></span></p>
+                                    <p>Wind💨: <span class="wind"></span></p>
+                                    <p>Humidity💦: <span class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 2</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp: <span class="temp"></span></p>
-                                    <p>Wind: <span class="wind"></span></p>
-                                    <p>Humidity: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span class="temp"></span></p>
+                                    <p>Wind💨: <span class="wind"></span></p>
+                                    <p>Humidity💦: <span class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 3</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp: <span class="temp"></span></p>
-                                    <p>Wind: <span class="wind"></span></p>
-                                    <p>Humidity: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span class="temp"></span></p>
+                                    <p>Wind💨: <span class="wind"></span></p>
+                                    <p>Humidity💦: <span class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 4</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp: <span class="temp"></span></p>
-                                    <p>Wind: <span class="wind"></span></p>
-                                    <p>Humidity: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span class="temp"></span></p>
+                                    <p>Wind💨: <span class="wind"></span></p>
+                                    <p>Humidity💦: <span class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 5</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp: <span class="temp"></span></p>
-                                    <p>Wind: <span class="wind"></span></p>
-                                    <p>Humidity: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span class="temp"></span></p>
+                                    <p>Wind💨: <span class="wind"></span></p>
+                                    <p>Humidity💦: <span class="humidity"></span></p>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,8 @@
         </div>
     </main>
 
-    <!-- Add jquery scripts double check-->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
