--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <form>
+                    <form id="searchCity">
                         <div class="form-group">
                             <label class="searchCity" for="cityInput">Search for a city:</label>
                             <input type="text" class="form-control" id="cityInput" placeholder="Search">
@@ -49,10 +49,10 @@
                         <div class="card-header">
                             <h2 id="cityName">City</h2>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="dailyForecast">
                             <p>Temp: <span id="temperature"></span></p>
-                            <p>Wind: <span id="wind"></span></p>
-                            <p>Humidity: <span id="humidity"></span></p>
+                            <p>Wind: <span id="windspeed"></span></p>
+                            <p>Humidity: <span id="humiditynumber"></span></p>
                         </div>
                     </div>
                 </div>
@@ -65,51 +65,51 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="forecast">
-                        <h2>5-day Forecast:</h2>
+                        <h3>5-day Forecast:</h3>
                         <div class="card-deck">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 1</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp🌡️: <span class="temp"></span></p>
-                                    <p>Wind💨: <span class="wind"></span></p>
-                                    <p>Humidity💦: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span id="temp1" class="temp"></span></p>
+                                    <p>Wind💨: <span id="wind1"class="wind"></span></p>
+                                    <p>Humidity💦: <span id="humidity1" class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 2</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp🌡️: <span class="temp"></span></p>
-                                    <p>Wind💨: <span class="wind"></span></p>
-                                    <p>Humidity💦: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span id="temp2" class="temp"></span></p>
+                                    <p>Wind💨: <span id="wind2"class="wind"></span></p>
+                                    <p>Humidity💦: <span id="humidity2" class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 3</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp🌡️: <span class="temp"></span></p>
-                                    <p>Wind💨: <span class="wind"></span></p>
-                                    <p>Humidity💦: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span id="temp3" class="temp"></span></p>
+                                    <p>Wind💨: <span id="wind3" class="wind"></span></p>
+                                    <p>Humidity💦: <span id="humidity3" class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 4</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp🌡️: <span class="temp"></span></p>
-                                    <p>Wind💨: <span class="wind"></span></p>
-                                    <p>Humidity💦: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span id="temp4" class="temp"></span></p>
+                                    <p>Wind💨: <span id="wind4" class="wind"></span></p>
+                                    <p>Humidity💦: <span id="humidity4" class="humidity"></span></p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Day 5</h5>
                                     <img src="weather-icon.png" alt="Weather Icon">
-                                    <p>Temp🌡️: <span class="temp"></span></p>
-                                    <p>Wind💨: <span class="wind"></span></p>
-                                    <p>Humidity💦: <span class="humidity"></span></p>
+                                    <p>Temp🌡️: <span id="temp5" class="temp"></span></p>
+                                    <p>Wind💨: <span id="wind5" class="wind"></span></p>
+                                    <p>Humidity💦: <span id="humidity5" class="humidity"></span></p>
                                 </div>
                             </div>
                         </div>
@@ -119,9 +119,7 @@
         </div>
     </main>
 
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="./assets/js/logic.js"></script>
